# media-server

./: Cargo.toml  Dockerfile  README.md  full-config.example.yml  minimal-config.example.yml
.github/workflows/: build-and-deploy.yml
examples/: full-config.yml
src/: app.rs  main.rs  s3.rs
src/config/: constants.rs  mod.rs  tests.rs
src/error/: mod.rs  tests.rs
src/routes/: mod.rs  tests.rs
