[package]
name = "media-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-config = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6.12"
color-eyre = "0.6.5"
ctrlc = "3.5.2"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
